# EmojiRunner

./: .gitignore  CMakeLists.txt  EmojiRunner.kdev4  EmojiRunnerCommands.khotkeys  Messages.sh  PKGBUILD  README.md  install-user.sh  install.sh  postinst  uninstall.sh
.github/workflows/: ci.yaml
src/: CMakeLists.txt  Emoji.cpp  Emoji.h  EmojiCategory.h  FileReader.cpp  FileReader.h  emojirunner-launcher.desktop  emojirunner.cpp  emojirunner.h  emojis.json  paste.py  plasma-runner-emojirunner.desktop
src/config/: emojirunner_config.cpp  emojirunner_config.h  emojirunner_config.ui  emojirunner_popup.cpp  emojirunner_popup.h  emojirunner_popup.ui  plasma-runner-emojirunner_config.desktop  utilities.h
src/core/: Config.h  Emoji.cpp  Emoji.h  EmojiCategory.h  FileReader.cpp  FileReader.h  emojis.json  macros.h  utilities.h
src/runner/: emojirunner.cpp  emojirunner.h  emojirunner.json  plasma-runner-emojirunner.desktop
src/tests/: CMakeLists.txt  FileReaderBenchmarker.h
